update some api